error
(python-facereco) pi@raspberrypi:~/MagicMirror/modules/MMM-Facial-Recognition $ npm run start

> magicmirror@2.29.0 start
> DISPLAY="${DISPLAY:=:0}" ./node_modules/.bin/electron js/electron.js

[2024-10-24 18:57:16.104] [LOG]   Starting MagicMirror: v2.29.0 
[2024-10-24 18:57:16.155] [LOG]   Loading config ... 
[2024-10-24 18:57:16.158] [LOG]   config template file not exists, no envsubst 
[2024-10-24 18:57:17.088] [INFO]  Checking config file /home/pi/MagicMirror/config/config.js ... 
[2024-10-24 18:57:17.209] [INFO]  Your configuration file doesn't contain syntax errors :) 
[2024-10-24 18:57:17.211] [INFO]  Checking modules structure configuration ... 
[2024-10-24 18:57:17.380] [INFO]  Your modules structure configuration doesn't contain errors :) 
[2024-10-24 18:57:17.384] [LOG]   Loading module helpers ... 
[2024-10-24 18:57:17.392] [LOG]   Initializing new module helper ... 
[2024-10-24 18:57:17.394] [LOG]   Module helper loaded: MMM-Facial-Recognition 
[2024-10-24 18:57:17.395] [LOG]   No helper found for module: clock. 
[2024-10-24 18:57:17.571] [LOG]   Initializing new module helper ... 
[2024-10-24 18:57:17.572] [LOG]   Module helper loaded: calendar 
[2024-10-24 18:57:17.573] [LOG]   No helper found for module: weather. 
[2024-10-24 18:57:17.722] [LOG]   Initializing new module helper ... 
[2024-10-24 18:57:17.722] [LOG]   Module helper loaded: newsfeed 
[2024-10-24 18:57:17.723] [LOG]   No helper found for module: compliments. 
[2024-10-24 18:57:17.724] [LOG]   All module helpers loaded. 
[2024-10-24 18:57:17.739] [LOG]   Starting server on port 8080 ...  
[2024-10-24 18:57:17.748] [WARN]  You're using a full whitelist configuration to allow for all IPs 
[2024-10-24 18:57:19.184] [LOG]   Server started ... 
[2024-10-24 18:57:19.186] [LOG]   Connecting socket for: MMM-Facial-Recognition 
[2024-10-24 18:57:19.187] [LOG]   Starting module helper: MMM-Facial-Recognition 
[2024-10-24 18:57:19.205] [LOG]   Connecting socket for: calendar 
[2024-10-24 18:57:19.206] [LOG]   Starting node helper for: calendar 
[2024-10-24 18:57:19.224] [LOG]   Connecting socket for: newsfeed 
[2024-10-24 18:57:19.225] [LOG]   Starting node helper for: newsfeed 
[2024-10-24 18:57:19.227] [LOG]   Sockets connected & modules started ... 
[2024-10-24 18:57:20.690] [LOG]   Launching application. 
[1249820:1024/185721.781060:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.792520:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.793572:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.798365:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.804816:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.813143:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.814370:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.820268:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.821951:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.822405:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.823655:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.828250:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.829696:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.836307:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.844061:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.849493:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.850287:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.850583:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.850969:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.852369:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.853644:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.860865:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.861928:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.862711:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.863731:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.864791:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[1249820:1024/185721.865491:ERROR:gbm_wrapper.cc(74)] Failed to get fd for plane.: No such file or directory (2)
[1249820:1024/185721.866162:ERROR:gbm_wrapper.cc(257)] Failed to export buffer to dma_buf: No such file or directory (2)
[2024-10-24 18:57:22.963] [INFO]  System information:
### SYSTEM:   manufacturer: ; model: ; virtual: false
### OS:       platform: linux; distro: Debian GNU/Linux; release: 12; arch: arm64; kernel: 6.6.51+rpt-rpi-v8
### VERSIONS: electron: 31.6.0; used node: 20.17.0; installed node: 20.9.0; npm: 10.1.0; pm2: 5.4.2
### OTHER:    timeZone: Asia/Calcutta; ELECTRON_ENABLE_GPU: undefined 
[2024-10-24 18:57:25.283] [LOG]   Create new calendarfetcher for url: https://calendar.google.com/calendar/ical/your-calendar-url.ics - Interval: 3600000 
[2024-10-24 18:57:25.717] [LOG]   Create new newsfetcher for url: http://feeds.bbci.co.uk/news/rss.xml - Interval: 300000 
[2024-10-24 18:57:25.969] [ERROR] stderr: Traceback (most recent call last):
  File "/home/pi/MagicMirror/modules/MMM-Facial-Recognition/face_recognition.py", line 2, in <module>
    import face_recognition
  File "/home/pi/MagicMirror/modules/MMM-Facial-Recognition/face_recognition.py", line 14, in <module>
    net = cv2.dnn.readNetFromCaffe(prototxt, model)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.10.0) /io/opencv/modules/dnn/src/caffe/caffe_io.cpp:1126: error: (-2:Unspecified error) FAILED: fs.is_open(). Can't open "modules/MMM-Facial-Recognition/deploy.prototxt" in function 'ReadProtoFromTextFile'

 
[2024-10-24 18:57:26.122] [LOG]   child process exited with code 1 
[2024-10-24 18:57:26.455] [INFO]  Newsfeed-Fetcher: reloadInterval set to ttl=900000 for url http://feeds.bbci.co.uk/news/rss.xml 
[2024-10-24 18:57:26.667] [ERROR] Calendar Error. Could not fetch calendar:  https://calendar.google.com/calendar/ical/your-calendar-url.ics Error: Not Found
    at NodeHelper.checkFetchStatus (/home/pi/MagicMirror/js/node_helper.js:102:9)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) 
[2024-10-24 18:57:27.397] [INFO]  Newsfeed-Fetcher: Broadcasting 36 items. 
[2024-10-24 18:57:51.370] [LOG]   Shutting down server... 
[2024-10-24 18:57:51.373] [LOG]   Stopping module helper: MMM-Facial-Recognition 
[2024-10-24 18:57:51.374] [LOG]   Stopping module helper: calendar 
[2024-10-24 18:57:51.375] [LOG]   Stopping module helper: newsfeed 
[2024-10-24 18:57:51.379] [LOG]   Node_helpers stopped ... 
